# ChatDKU

./: .env  .env.agent  .env.example  .env.local  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DK_SR_CLASSDATA_CHATDKU.csv  Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  GUIDE.md  README.md  README_CN.md  README_EN.md  SECURITY.md  TODO.md  Technical_Report_EN.md  agent.sh  app.py  config.py  devsync.sh  docker-compose.agent.yml  docker-compose.yml  lets_chat.txt  llama_index_survey.md  manage.py  nohup.out  pyproject.toml  requirements.txt  settings.py  技术报告_中文.md
RAG/: README.md  agent_query.py  app.py  auto_retrieval.py  config.py  converthtml2md.py  coverthtml2md.py  custom_filetype_detect.py  custom_partation.py  custom_query.py  data2documents.py  data_count_size.sh  detect_and_update.py  documents_reprocess.py  dspy_patch.py  get_answer.py  hash.pkl  llama_utils.py  load_and_index.py  load_redis.py  map_to_table.py  menu2doc.ipynb  metadata_filter.py  partition_runtime_test.py  postprocessors.py  pyproject.toml  query.py  query_simple.py  recursive_directory_summarize.py  settings.py  setup.py  test.ipynb  test.py  update.py  update_data  update_data.py
RAG/extracted_docs/: 43771.htm_0.txt  43771.htm_1.txt  43771.htm_10.txt  43771.htm_11.txt  43771.htm_12.txt  43771.htm_13.txt  43771.htm_15.txt  43771.htm_16.txt  43771.htm_19.txt  43771.htm_2.txt  43771.htm_22.txt  43771.htm_23.txt  43771.htm_24.txt  43771.htm_25.txt  43771.htm_26.txt  43771.htm_27.txt  43771.htm_29.txt  43771.htm_3.txt  43771.htm_30.txt  43771.htm_31.txt  43771.htm_32.txt  43771.htm_33.txt  43771.htm_34.txt  43771.htm_4.txt  43771.htm_5.txt  43771.htm_7.txt  43771.htm_8.txt  43771.htm_9.txt  6209.htm_0.txt  6209.htm_10.txt  6209.htm_100.txt  6209.htm_101.txt  6209.htm_102.txt  6209.htm_103.txt  6209.htm_105.txt  6209.htm_106.txt  6209.htm_107.txt  6209.htm_108.txt  6209.htm_109.txt  6209.htm_11.txt  (+14308 more)
RAG/get_new_documents/: check_pdf_documents.ipynb  deal_with_html.ipynb  pdf_llamaparse.py
RAG/logs/: vector_hyde_false.txt  vector_hyde_true.txt
RAG/rediss/: vector_retriever.py
RAG/tools/search/: duckduckgo.py  duckduckgo_search.py  google_search.py
agent_dku/: CampusServiceTool.py  CampusService_tool.py  agent.py  compile.py  dspy_common.py  dspy_patch.py  google_tool.py  graphrag_tool.py  llamaindex_tool.py  llamaindex_tools.py  pyproject.toml  rag_tools.py  run.py  serialization.py  tool.py  utils.py
agent_dku/RAG/: config.py
agent_dku/dspy_classes/: contexts.py  conversation_memory.py  judge.py  plan.py  prompt_settings.py  query_rewrite.py  synthesizer.py  tool_memory.py
agent_dku/graphrag/query/: __main__.py
agent_dku/graphrag/vector_stores/: lancedb.py
benchmarks/seekbench/: pyproject.toml
benchmarks/seekbench/trace_eval/: generate_traces.py
chatdku/: README.md  config.py  current.txt  custom_schema.yaml  diff.txt  nohup.out  pyproject.toml  setup.py  test.py  update_pyproject.py
chatdku/RAG/: agent_query.py  app.py  config.py  detect_and_update.py  load_and_index.py  query.py
chatdku/RAG/rediss/: key_word.py
chatdku/agent_dku/: graphrag_tool.py  llamaindex_tools.py
chatdku/agent_dku/dspy_classes/: judge.py
chatdku/backend/: agent_app_parellel.py  config.py  main.py  readme.md  streaming.md  stt_app.py  user_data_interface.py
chatdku/backend/app/: __init__.py  admin.py  models.py  routes.py  utils.py
chatdku/backend/routes/: chat.py
chatdku/benchmarks/: .gitignore  README.md
chatdku/benchmarks/seekbench/: README.md  eval.sh
chatdku/chatdku/: __init__.py  config.py  custom_schema.yaml  hash.pkl  setup.py
chatdku/chatdku/RAG/: app.py  data2documents.py  detect_and_update.py  query.py
chatdku/chatdku/agent_dku/: agent.py  dspy_patch.py  llamaindex_tools.py  utils.py
chatdku/chatdku/backend/: .gitignore  =4.11.0  admin_setup.py  agent.py  agent_app.py  agent_app_parellel.py  agent_stt_app.py  config.py  database.db  extentions.py  main.py  models.py  nohup.out  readme.md  routes.py  save_feedback.py  stt_app.py  test_ssl_socket.py  user_data_interface.py  user_data_interface_readme.md  whisper_model.py
chatdku/chatdku/core/: README.md  agent.py  compile.py  dspy_common.py  evaluation.py  llamaindex_tools.py  query_context_log.json  run.py  setup_proxy.sh  test_qwen.ipynb  utils.py
chatdku/chatdku/deploy/: agent_app.py  agent_app_parellel.py  index.html  terms.html
chatdku/chatdku/django/: readme.md
chatdku/chatdku/frontend/: .gitignore  README.md  access_denied.html  chatdku_remarks.html  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  prompts.txt  script.js  styles.css
chatdku/chatdku/ingestion/: README.md  agent_query.py  custom_filetype_detect.py  documents_reprocess.py  generate_db_for_advising.py  html_cleaner.py  improved_html_cleaner.py  ingest_courses.py  load_and_index.py  load_chroma.py  load_postgres.py  load_redis.py  new_update_data.py  update.py  (+5 more)
chatdku/core/: README.md  agent.py  ascii_logo  intermediate_tracing.py  tui.py  utils.py
chatdku/deploy/: agent_app.py
chatdku/django/: readme.md
chatdku/ingestion/: README.md  clean_classdata.py  improved_html_cleaner.py  insert_events_to_weekly_table.py  load_chroma.py  load_postgres.py  local_ingest.py  major_ingest.py  structure_chunker.py  update_data.py
chatdku/tests/: test_courses_ret.py  test_fastAPI.py  test_fastapi_memory.py  test_load_retriever.py  test_memory_agent.py  test_retriever.py  test_sql_agent.py
crawler/: README.md  ali_PDF_Cody.py  dku_site_crawler.py  pyproject.toml
crawler/PDF OCR/: Demo_ Office Of UG Studies.xlsx
deploy/: README.md  agent_app.py  agent_app_parellel.py  pyproject.toml  save_feedback.py  script.js
deploy/logs/: agent_logs.txt  python_server_logs.txt  save_fb_logs.txt
raptor/: README.md  pyproject.toml  test_raptor.py
rediss/test_redis/: load.py  pyproject.toml
scraper/: README.md  pyproject.toml  report.py  scraper.py  utils.py
scraper/PDF OCR/: ali_PDF_Cody.py
scraper/scraper/: event_scraper.py  filter_llm.py  report.py  scraper.py  utils.py
(+1110 files in other folders)
