[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dku_llm_rag"
version = "1.0.0"
authors = [
    { name="Mingxi Li" },
    { name="Yuxiang Lin", email="theta.lin@yandex.com" },
    { name="Cody Qin" },
    { name="Ningyuan Yang" },
]
description = ""
readme = ""
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "llama-index~=0.10.38",
    "unstructured[pdf]~=0.14.2",
    "chromadb~=0.5.0",
    "llama-index-vector-stores-chroma~=0.1.8",
    "llama-index-embeddings-huggingface~=0.2.0",
    "llama-index-llms-llama-cpp~=0.1.3",
    "llama-index-retrievers-bm25~=0.1.3",
    "arize-phoenix~=4.2.4",
    "llama-index-callbacks-arize-phoenix~=0.1.5",
]

[tool.setuptools]
py-modules = []
