[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dku_llm_rag"
version = "1.0.0"
authors = [
    { name="Mingxi Li" },
    { name="Yuxiang Lin", email="theta.lin@yandex.com" },
    { name="Cody Qin" },
    { name="Ningyuan Yang" },
]
description = ""
readme = ""
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "llama-index~=0.10.49",
    "llama-index-vector-stores-chroma~=0.1.9",
    "llama-index-embeddings-huggingface~=0.2.2",
    "llama-index-llms-llama-cpp~=0.1.4",
    "llama-index-retrievers-bm25~=0.1.4",
    "unstructured[pdf]~=0.14.7",
    "chromadb~=0.5.3",
    "arize-phoenix~=4.5.0",
    "openinference-instrumentation-llama-index~=2.0.0",
    "opentelemetry-proto~=1.25.0",
    "opentelemetry-exporter-otlp~=1.25.0",
    "opentelemetry-sdk~=1.25.0",
    "dspy-ai~=2.4.10",
]

[tool.setuptools]
py-modules = []
