[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_dku"
version = "1.0.0"
authors = [
    { name="Mingxi Li" },
    { name="Yuxiang Lin", email="theta.lin@yandex.com" },
    { name="Cody Qin" },
    { name="Ningyuan Yang" },
]
description = ""
readme = ""
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.8.0",
    "llama-index~=0.11.9",
    "llama-index-storage-docstore-redis~=0.2.0",
    "llama-index-vector-stores-redis~=0.3.2",
    "llama-index-vector-stores-chroma~=0.2.0",
    "llama-index-embeddings-text-embeddings-inference~=0.2.0",
    "llama-index-llms-openai-like~=0.2.0",
    "llama-index-llms-llama-cpp~=0.2.2",
    "llama-index-retrievers-bm25~=0.3.0",
    "llama-index-postprocessor-cohere-rerank~=0.2.0",
    "llama-index-postprocessor-colbert-rerank~=0.2.1",
    "unstructured[pdf]~=0.15.12",
    "chromadb>=0.5.0",
    "arize-phoenix~=4.33.2",
    "openinference-instrumentation-llama-index~=3.0.2",
    "opentelemetry-proto~=1.27.0",
    "arize-phoenix-otel~=0.5.0",
    "dspy-ai~=2.4.10",
    "magicattr~=0.1.6", # FIXME: For patching DSPy's set_attribute_by_name()
]

[tool.setuptools]
py-modules = []
