[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ChatDKU"
version = "1.0.0"
authors = [
    { name="Mingxi Li" },
    { name="Yuxiang Lin", email="theta.lin@yandex.com" },
    { name="Cody Qin" },
    { name="Ningyuan Yang" },
]
description = ""
readme = ""
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    # core
    "llama-index",
    "llama-index-storage-docstore-redis",
    "llama-index-vector-stores-redis",
    "llama-index-embeddings-text-embeddings-inference",
    "llama-index-llms-openai-like",
    "llama-index-llms-llama-cpp",
    "llama-index-retrievers-bm25",
    "unstructured[pdf]~=0.14.7",
    "chromadb~=1.0.15",
    "arize-phoenix~=5.5.2",
    "opentelemetry-api~=1.27.0",
    "opentelemetry-sdk~=1.27.0",
    "openinference-semantic-conventions~=0.1.10",
    "dspy",

    # backend
    "Flask~=3.0.3",
    "Flask-Cors~=4.0.1",
    "gunicorn~=23.0.0",
    "whisper~=1.1.10",
    "Flask-SocketIO~=5.5.1",
    "pydub~=0.25.1",
    "python-ffmpeg~=2.0.12",
    "Flask-SQLAlchemy~=3.1.1",
    "Flask-Migrate~=4.1.0",
    "Flask-Admin~=1.6.1",
    "eventlet~=0.39.1",
    "openai-whisper",
    "ollama==0.4.9",
    "plotly==6.1.2",

    #Django backend
    "Django~=5.2.3",
    "django-appconf~=1.1.0",
    "django-cors-headers~=4.7.0",
    "django-cryptography~=1.1",
    "django-encrypted-model-fields~=0.6.5",
    "django-fernet-fields~=0.6",
    "django-import-export~=4.3.8",
    "djangorestframework~=3.16.0",
    "django-celery-beat~=2.8.1",
    "django_celery_results~=2.6.0",
    "celery~=5.5.3"
    ]

[tool.setuptools]
packages = ["chatdku"]
