[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dku_web_scraper"
version = "1.0.0"
authors = [
    { name="Yuxiang Lin", email="theta.lin@yandex.com" },
]
description = ""
readme = ""
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.10.5",
    "yarl>=1.9.4",
    "beautifulsoup4>=4.12.3",
    "dataclass-csv>=1.4.0",
    # `dataclass-csv` depends on `distutils`, which is removed in Python 3.12,
    # and can be fixed by installing `setuptools`.
    "setuptools; python_version>='3.12'",
    "MechanicalSoup>=1.3.0",
]

[tool.setuptools]
packages = ["scraper"]
