[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test_redis"
version = "1.0.0"
dependencies = [
    "llama-index",
    "llama-index-storage-docstore-redis",
    "llama-index-vector-stores-redis",
    "llama-index-embeddings-text-embeddings-inference",
]

[tool.setuptools]
py-modules = []
